--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -2,9 +2,9 @@ name: Release and Deploy Todo
 
 #trigger
 on:
- push
+ push:
   branches:
-  - release/*
+  - 'release/[A-Za-z0-9.]+'
   # paths:
   # - release/*
 
